--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.8.3",
+    "electron-builder": "^24.9.1",
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "ts-loader": "~8.2.0",
