--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
     "core-js": "^3.8.3",
     "electron-builder": "^24.9.1",
     "sass": "^1.69.6",
